--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                        <div class="col-1-of-2">
                            <div class="skewed skewed--right u-margin-bottom-med"><h2 class="heading-secondary">MY PASSIONS</h2></div>
                            <div class="section-about__text-box">
-                               <p class="paragraph color-black"><i class="fas fa-code color-secondary"></i><span class="dots">......................</span> <strong>Front-end development</strong></p>
-                                <p class="paragraph color-black"><i class="fas fa-music color-secondary"></i> <span class="dots">...............................................</span> <strong>My music</strong></p>
-                               <p class="paragraph color-black"><i class="fas fa-gamepad color-secondary"></i><span class="dots">..............................................</span> <strong>My games</strong></p>
-                               <p class="paragraph color-black"><i class="fas fa-bicycle color-secondary"></i><span class="dots">...................................................</span> <strong>Cycling</strong></p>
+                               <p class="paragraph color-black"><i class="fas fa-code color-secondary"></i><span class="dots">..........</span>.................... <strong>Front-end development</strong></p>
+                               <p class="paragraph color-black"><i class="fas fa-music color-secondary"></i> <span class="dots">..........</span>............................................. <strong>My music</strong></p>
+                               <p class="paragraph color-black"><i class="fas fa-gamepad color-secondary"></i><span class="dots">..........</span>............................................ <strong>My games</strong></p>
+                               <p class="paragraph color-black"><i class="fas fa-bicycle color-secondary"></i><span class="dots">..........</span>................................................. <strong>Cycling</strong></p>
                            </div>
                        </div>
                        
@@ -215,8 +215,8 @@
                               <div class="content">
                                   <h2 class="heading-secondary color-grey-dark">PSD/CSS</h2>
                                   <div class="header-bar header-bar--small"></div>
-                                  <p class="paragraph color-grey-dark u-margin-top-med">Follow the link to see a live previe of websites I converted to css from psd.</p>
-                                  <a href="#" class="btn btn--transparent--3 u-margin-top-med
+                                  <p class="paragraph color-grey-dark u-margin-top-med">Follow the link to see a live preview of one of the websites I converted to css from psd.</p>
+                                  <a href="#" class="btn btn--transparent--4 u-margin-top-med
                                   ">See more &rarr;</a>
                               </div>
                           </li>
@@ -230,7 +230,7 @@
                                   <h2 class="heading-secondary color-grey-dark">JAVASCRIPT</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Check out my github account to see my pure javascript projects..</p>
-                                  <a href="#" class="btn btn--transparent--3 u-margin-top-med
+                                  <a href="https://github.com/Piotr-Modes" class="btn btn--transparent--3 u-margin-top-med
                                   ">Visit &rarr;</a>
                               </div>
                               </div>
@@ -244,7 +244,7 @@
                                   <h2 class="heading-secondary color-grey-dark">GAMES</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Click to play one of the games I wrote in javascript...</p>
-                                  <a href="#" class="btn btn--transparent--3 u-margin-top-med
+                                  <a href="https://piotr-modes.github.io/Mr.-Shippy/" class="btn btn--transparent--4 u-margin-top-med
                                   ">Play &rarr;</a>
                               </div>
                           </li>    
@@ -257,7 +257,7 @@
                                   <h2 class="heading-secondary color-grey-dark">MUSIC</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Check out my bands soundcloud to hear our music...</p>
-                                  <a href="#" class="btn btn--transparent--3 u-margin-top-med
+                                  <a href="https://soundcloud.com/piotr-modes" class="btn btn--transparent--3 u-margin-top-med
                                   ">Visit &rarr;</a>
                               </div>
                           </li>
@@ -296,7 +296,7 @@
                       </form>
                     </div>
                     <div class="footer__copyrights">
-                        <p class="color-grey-light">Piotr Modes</p>
+                        <p class="color-grey-light">Piotr.Modes@gmail.com</p>
                         <p class="color-grey-dark-2">&copy; Copyright 2018.<br>
                         All rights reserved. Created by <span class="color-grey-light">Piotr Modes.</span><br>
                         </p>
