--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                        <div class="col-1-of-2">
                            <div class="skewed skewed--right u-margin-bottom-med"><h2 class="heading-secondary ">WHO I AM</h2></div>
                            <div class="section-about__text-box">
-                                <p class="paragraph color-black">My name is <strong>Piotr Modes</strong> and I'm a <strong>front-end</strong> developer. I currently live in katowice <strong>Poland</strong> where I spend most of my time coding and constanly <strong>learning</strong> new front-end techniques. In my spare time I enjoy playing <strong>guitar</strong> and <strong>drums</strong> with my band. </p>
+                                <p class="paragraph color-black">My name is <strong>Piotr Modes</strong> and I'm a <strong>front-end</strong> developer. I currently live in Katowice <strong>Poland</strong> where I spend most of my time coding and constanly <strong>learning</strong> new front-end techniques. In my spare time I enjoy playing <strong>guitar</strong> and <strong>drums</strong> with my band. </p>
                            </div>
                        </div>
                        <div class="col-1-of-2">
@@ -131,7 +131,7 @@
                                        <h3 class="heading-tertiary color-white">JAVASCRIPT</h3>
                                    </div>
                                    <div class="graph__circle__text-box__paragraph">
-                                       <p class="paragraph paragraph--med paragraph--black ">Where the real fun starts and everyfing gains life</p>
+                                       <p class="paragraph paragraph--med paragraph--black ">Where the real fun starts and everything gains life</p>
                                    </div>
                                </div>
                            </div>
