--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                   <h2 class="heading-secondary color-grey-dark">PSD/CSS</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Follow the link to see a live preview of one of the websites I converted to css from psd.</p>
-                                  <a href="#" class="btn btn--transparent--4 u-margin-top-med
+                                  <a href="https://piotr-modes.github.io/TAKE/" class="btn btn--transparent--4 u-margin-top-med
                                   ">See more &rarr;</a>
                               </div>
                           </li>
