adding method=post to form

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
            <footer id="contact" class="footer scroll">
                <div class="row">
                    <div class="container">
-                      <form action="http://formspree.io/piotr.modes@gmail.com">
+                      <form action="http://formspree.io/piotr.modes@gmail.com" method="POST">
                           <h4 class="form__heading color-white ">
                                Get in touch
                           </h4>
