--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                 <input type="text" id="fname" name="firstname" placeholder="Name">
 
 
-                                <input type="text" id="lname" name="lastname" placeholder="Email">
+                                <input type="text" id="email" name="email" placeholder="Email">
                              </div>
 
 
