change formspree form

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
            <footer id="contact" class="footer scroll">
                <div class="row">
                    <div class="container">
-                      <form action="http://formspree.io/piotr.modes@gmail.com" method="POST">
+                      <form action="https://formspree.io/piotr.modes@gmail.com" method="POST">
                           <h4 class="form__heading color-white ">
                                Get in touch
                           </h4>
@@ -318,6 +318,7 @@
                          <button class="form__submit btn btn--transparent btn--transparent--2" type="submit">Send</button> 
                       </form>
                     </div>
+
                     <div class="footer__copyrights">
                         <p class="color-grey-light">piotr.modes@gmail.com</p>
                         <p class="color-grey-dark-2">&copy; Copyright 2019.<br>
