open links in new tabs

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                                     and I'm a <strong>front-end</strong> developer.
                                      I currently live in <strong>Katowice</strong> 
                                      where I work as a front-end developer for <strong>"Life In Mobile"</strong>. 
-                                     After work I'm learning <strong>React</strong> and having a lot of fun with it :)
+                                     After work I'm learning <strong>React</strong> and having a lot of fun with it,
+                                     check out my <a href="https://react-movies-5cab0.firebaseapp.com" target="_blank"><strong>React App</strong></a> :)
                                       In my spare time I enjoy playing 
-                                     <strong>guitar</strong> and <strong>drums</strong> with my band.
+                                     <strong>guitar</strong> and <strong>drums</strong>.
                                 </p>
                            </div>
                        </div>
@@ -227,7 +228,7 @@
                                   <h2 class="heading-secondary color-grey-dark">PSD/CSS</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Follow the link to see a live preview of one of the websites I converted to css from psd.</p>
-                                  <a href="https://piotr-modes.github.io/TAKE/" class="btn btn--transparent--4 u-margin-top-med
+                                  <a href="https://piotr-modes.github.io/TAKE/" target="_blank" class="btn btn--transparent--4 u-margin-top-med
                                   ">See more &rarr;</a>
                               </div>
                           </li>
@@ -240,7 +241,7 @@
                                     <h2 class="heading-secondary color-grey-dark">REACT</h2>
                                     <div class="header-bar header-bar--small"></div>
                                     <p class="paragraph color-grey-dark u-margin-top-med">Check out the Movie App I've wrote using React with Redux nad Firebase.</p>
-                                    <a href="https://react-movies-5cab0.firebaseapp.com" class="btn btn--transparent--3 u-margin-top-med
+                                    <a href="https://react-movies-5cab0.firebaseapp.com" target="_blank" class="btn btn--transparent--3 u-margin-top-med
                                     ">See more &rarr;</a>
                                 </div>
                             </li>
@@ -254,7 +255,7 @@
                                   <h2 class="heading-secondary color-grey-dark">JAVASCRIPT</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Check out my github account to see my pure javascript projects..</p>
-                                  <a href="https://github.com/Piotr-Modes" class="btn btn--transparent--3 u-margin-top-med
+                                  <a href="https://github.com/Piotr-Modes" target="_blank" class="btn btn--transparent--3 u-margin-top-med
                                   ">Visit &rarr;</a>
                               </div>
                               </div>
@@ -281,7 +282,7 @@
                                   <h2 class="heading-secondary color-grey-dark">GAMES</h2>
                                   <div class="header-bar header-bar--small"></div>
                                   <p class="paragraph color-grey-dark u-margin-top-med">Click to play one of the games I wrote in javascript...</p>
-                                  <a href="https://piotr-modes.github.io/Mr.-Shippy/" class="btn btn--transparent--4 u-margin-top-med
+                                  <a href="https://piotr-modes.github.io/Mr.-Shippy/" target="_blank" class="btn btn--transparent--4 u-margin-top-med
                                   ">Play &rarr;</a>
                               </div>
                           </li>    
